[package]
name = "src-tauri"
version = "0.1.0"
description = "File Explorer"
authors = ["Conaticus", "ProtogenDelta", ]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# Replace "0.1" with the correct version of the `explorer` crate
tauri = { version = "2.4", features = [] }  # Removed "log" feature
tauri-plugin-opener = "2.2"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.33.1"
walkdir = "2.3.3"
tokio = { version = "1.28.2", features = ["full"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
serde_json = "1.0.140"
chrono = "0.4.40"
trash = "5.2.2"
tempfile = "3.19.1"
home = "0.5.11"
rayon = "1.10.0"
rand = "0.7.3"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }  # Removed "log" feature

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
