[package]
name = "src-tauri"
version = "0.1.0"
description = "File Explorer"
authors = ["Conaticus", "ProtogenDelta", "Marco Brandt", "Lauritz Wiebusch", "Daniel Schatz", "Sören Panten"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# Replace "0.1" with the correct version of the `explorer` crate
tauri = { version = "2.4", features = ["unstable"] }  # Removed "log" feature
serde = { version = "1", features = ["derive"] }
sysinfo = "0.33.1"
walkdir = "2.3.3"
tokio = { version = "1.28.2", features = ["full"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
serde_json = "1.0.140"
chrono = "0.4.40"
trash = "5.2.2"
tempfile = "3.19.1"
home = "0.5.11"
rand = "0.7.3"
md-5 = "0.11.0-pre.5"
sha2 = "0.10.8"
crc32fast = "1.3.2"
hex = "0.4.3"
once_cell = "1.21.3"
zip = "3.0.0"
regex = "1.11.1"
smallvec = "1.15.0"
open = "5.3.2"
rustc-hash = "2.1.1"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }  # Removed "log" feature

[package.metadata.tauri]
bundle.identifier = "com.software.fileexplorer"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Benchmark fetures
benchmarks = ["bench"]
bench = []

# Logging features
log-all = ["search-error-logging", "index-error-logging", "search-progress-logging", "index-progress-logging"]
log-search = ["search-progress-logging", "search-error-logging"]
search-progress-logging = []
search-error-logging = []
log-index = ["index-progress-logging", "index-error-logging"]
index-progress-logging = []
index-error-logging = []

# Testing features
full = ["long-tests", "generate-test-data", "benchmarks", "open-file-in-app"]
full-no-generate-test-data = ["long-tests", "benchmarks", "open-file-in-app"]
open-file-in-app = []
generate-test-data = []
long-tests = []

# SearchEngine features

